manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluearchive
  labels:
    name: bluearchive
spec:
  ingressClassName: traefik
  rules:
    - host: bluearchive-api.skyia.jp
      http:
        paths:
          - pathType: Exact
            path: "/api"
            backend:
              service:
                name: bluearchive-go-api
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/"
            backend:
              service:
                name: bluearchive-go-api
                port:
                  number: 80
          - pathType: Exact
            path: "/og"
            backend:
              service:
                name: bluearchive-go-api
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bluearchive-frontend
                port:
                  number: 80
